# search-engine

./: .gitignore  CMakeLists.txt
config/: answers.json  requests.json
include/: config.h  converter_json.h  pch.h
src/: config.cpp  converter_json.cpp  main.cpp
test/: main.cpp  test.cpp  test_config.h  test_converter_json.h
test/config/: answers.json  config.json  requests.json
